order columns in Media Query

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gatsby-remark-smartypants": "2.0.7",
     "gatsby-source-filesystem": "2.0.16",
     "gatsby-transformer-remark": "2.2.0",
-    "gatsby-transformer-sharp": "2.1.10"
+    "gatsby-transformer-sharp": "2.1.10",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.12",
