--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gatsby-source-filesystem": "2.0.16",
     "gatsby-transformer-remark": "2.2.0",
     "gatsby-transformer-sharp": "2.1.10",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "react-bootstrap": "^1.0.0-beta.5"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.12",
@@ -38,7 +39,7 @@
     "@fortawesome/react-fontawesome": "0.1.4",
     "animate.css": "3.7.0",
     "babel-eslint": "10.0.1",
-    "bootstrap": "4.2.1",
+    "bootstrap": "^4.2.1",
     "emergence.js": "1.1.2",
     "eslint": "5.12.1",
     "eslint-config-prettier": "3.6.0",
